[package]
name    = "kernbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "http2"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
http = "1.0"
http-body-util = "0.1"
bytes = "1"
askama = "0.15"
askama_web = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
uci_rs = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["now"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
